Changed home.html to index.html

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
             background-size: cover;
         }
     </style>
-    <a href="home.html" class="link">Overview</a>
+    <a href="index.html" class="link">Overview</a>
 </head>
 
 <body>
@@ -27,7 +27,8 @@
     <p>Stan Lee was the brains and driving force behind the Marvel Comic Enterprise and ultimately was responsible for the success that The Avengers Comics and movies are. Stan Lee battled multiple hindrances and misdemeanours and overcame them to realise
         his dream of making and publishing not only comics, but ideas and creating unity through these ideas. He truly understood the power of ideas. He also built a universe of wonder, lore and continous growth.This universe was one that fed peoples'
         imagination , and through this the Marvel universe has grone, not through its original developers but, through its fans. Therefore, it is due to his lifelong sacrifices that have bought people such joy and entertainment.He should thus never be
-        forgotten.</p>
+        forgotten.
+    </p>
     <h1>In Loving Memory of The Legend Himself</h1>
     <h2>28 Dec 1922 - 12 Nov 2018 (age 95)</h2>
     <p style="text-align: center;"><img src="images/stan lee.jpg"></p>
