--- a/help.html
+++ b/help.html
@@ -10,7 +10,7 @@
             background-size: cover;
         }
     </style>
-    <a href="home.html" class="link">Overview</a>
+    <a href="index.html" class="link">Overview</a>
 </head>
 
 <body>
